# swagger_api/api/swagger/swagger.yaml
@@ -3,7 +3,7 @@ info:
   version: "0.0.1"
   title: Blockchain Insurance Api
 # during dev, should point to your local machine
-host: localhost:10010
+host: localhost:8081
 # basePath prefixes all resource paths 
 basePath: /
 # 
@@ -54,6 +54,13 @@ paths:
       description: " "
       # used as the method name of the controller
       operationId: getEQContract
+      parameters:
+        - name: getEQContractRequest
+          in: body
+          description: ""
+          required: true
+          schema: 
+            $ref: "#/definitions/getEQContractRequest"
       responses:
         "200":
           description: Success
@@ -248,8 +255,6 @@ definitions:
     properties:
       address:
         type: string
-      duration:
-        type: number
   createResponse:
     properties:
       address:
@@ -302,6 +307,10 @@ definitions:
     properties:
       address:
         type: string
+  getEQContractRequest:
+    properties:
+      id:
+        type: number
       
         
   
